# wsg

./: .gitignore  Cargo.toml  LICENSE  VS-01.md  VS-02.md  VS-10.md  __workflow__.md  frontend.slnx
.stitch/: DESIGN.md
.stitch/changes/: code.html
app/: Cargo.toml  tauri.conf.json
app/capabilities/: default.json
app/icons/: icon.icns
app/src/: lib.rs
app/src/commands/: file_diff_result.rs  file_status.rs  git.rs  git_status_result.rs  mod.rs
app/src/error/: mod.rs
backend/linux/lin-api/: Cargo.toml
backend/linux/lin-api/src/: lib.rs
backend/linux/lin-api/src/error/: mod.rs
backend/windows/win-api/: Cargo.toml
backend/windows/win-api/src/: lib.rs
backend/windows/win-api/src/error/: mod.rs
frontend/Wsg/: Program.cs  Wsg.csproj  _Imports.razor
frontend/Wsg/Layout/: ActionBar.razor  AddRepoModal.razor  MainLayout.razor  NavMenu.razor  NavMenu.razor.cs  RepoTabBar.razor
frontend/Wsg/Models/: GitModels.cs  TreeNode.cs
frontend/Wsg/Pages/: Home.razor
frontend/Wsg/Pages/Components/: CommitPane.razor  DiffPane.razor  StagedPane.razor  UnstagedPane.razor
frontend/Wsg/Properties/: launchSettings.json
frontend/Wsg/Services/: AppState.cs  FileTreeService.cs  GitService.cs  PathConverter.cs
frontend/Wsg/wwwroot/: index.html
frontend/Wsg/wwwroot/css/: app.css
