[package]
name = "app"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
error-location = { workspace = true }
tauri          = { workspace = true }
tauri-plugin-dialog = "2.7.0"
thiserror      = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }
