[package]
name = "app"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
error-location      = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tauri               = { workspace = true }
tauri-plugin-dialog = { workspace = true }
thiserror           = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }
